<?xml version="1.0"?>
<package format="3">
  <name>br_logger_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 integration layer for br_logger high-performance logging library</description>
  <maintainer email="bandiera@todo.todo">bandiera</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
